# django-stardate-filter

./: MANIFEST.in  README.rst  boot_django.py  load_tests.py  makemigrations.py  pyproject.toml  setup.cfg
django_stardate_filter.egg-info/: PKG-INFO  SOURCES.txt
django_startdate_filter.egg-info/: PKG-INFO  SOURCES.txt
stardate/templatetags/: stardate.py
