[build-system]
requires = ['setuptools>=40.8.0', 'wheel']
build-backend = 'setuptools.build_meta:__legacy__'
[project]
name = "django-stardate-filter"
version = "0.2"
authors = [
  { name="Virgo STYX", email="virgostyx@gmail.com" },
]
description = "A django filter to convert a date into a stardate"
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/virgostyx/django-stardate-filter"
"Bug Tracker" = "https://github.com/virgostyx/django-stardate-filter/issues"